--- a/4-7-15/src/classes/sjg_test.cls
+++ b/4-7-15/src/classes/sjg_test.cls
@@ -8,6 +8,9 @@ global class sjg_test implements Messaging.InboundEmailHandler {
     global Messaging.InboundEmailResult handleInboundEmail(Messaging.InboundEmail email, Messaging.InboundEnvelope envelope) {
         Messaging.InboundEmailResult result = new Messaging.InboundEmailresult();
 		
+		
+		
+		/**
 		Integer x_index=0;
 		String varsweneed='year1Billing,year2Billing,year3Billing';
 		String currentvar='';
@@ -21,15 +24,21 @@ global class sjg_test implements Messaging.InboundEmailHandler {
 			
 			if (email.plainTextBody.indexOfIgnoreCase('<' + currentvar +'>')!=-1 && email.plainTextBody.indexOfIgnoreCase('</' + currentvar +'>')!=-1){
 				system.debug(email.plainTextBody.substring(email.plainTextBody.indexOfIgnoreCase('<' + currentvar +'>')+currentvar.length()+2,email.plainTextBody.indexOfIgnoreCase('</' + currentvar +'>')).trim());
-				
-				
-				
 			}
-				
+			
 		}
+		*/
+		/**
+		String emailbody=email.plainTextBody;
+		system.debug(GetNode('test',emailbody));
+		*/
 			
-			
-    return result;
+    return Null;
     }
 
+			
+			
+		
+		
+	
 }
