--- a/4-7-15/src/classes/CreateDraftContractFromContract.cls
+++ b/4-7-15/src/classes/CreateDraftContractFromContract.cls
@@ -17,6 +17,8 @@ public with sharing class CreateDraftContractFromContract {
             
            
 			Contract cont = [Select Date_EagleEye_User_Count_Updated__c, Contract_Term_Length_Yrs__c, Year_1_Maintenance_Amount_EagleEye__c, Year_1_Maintenance_Amount_DocXtools__c,Year_1_Maintenance_Amount_3BClean__c,contractNumber, original_contract_name__c, original_contract_date__c, startdate, enddate, account.industry, account.Client_Relations_Account_Owner__c,Id,AccountId,OwnerExpirationNotice,BillingStreet,BillingCity,BillingState,BillingPostalCode,BillingCountry,ContractTerm,OwnerId,Status,CompanySignedId,CompanySignedDate,CustomerSignedId,CustomerSignedTitle,CustomerSignedDate,SpecialTerms,ActivatedById,ActivatedDate,StatusCode,Description,Name,LastApprovedDate,LastActivityDate,Contract_Type__c,Contract_Sub_Type__c,Budget_Letter_Sent__c,Budget_Letter_Sent_Date__c,Addendum_Sent__c,Addendum_Sent_Date__c,In_Negotiation__c,In_Negotiation_Date__c,Customer_Signed__c,Agreement_Termination_Notice_Sent__c,Agreement_Termination_Notice_Sent_Date__c,Software_Removal_Acknowledgement_Recd__c,Software_Removal_Acknowledgement_Date__c,Legacy_Contract_ID__c,Out_Clause__c,Annual_Renewal__c,Billing_Contact__c,Legacy_Client_ID__c,Maintenance_Letter__c,DocXchange_with_KP__c,Number_of_Documents__c,Year1_Billing_Date__c,Year2_Billing_Date__c,Year3_Billing_Date__c,Previous_Term_Contract__c,Originating_Opportunity__c,SF_Migration_Id__c,Enterprise_License__c,InSituSCV__Billing_Address_ISO__c,InSituSCV__Billing_Address_Status__c,InSituSCV__Shipping_Address_ISO__c,InSituSCV__Shipping_Address_Status__c,Annual_True_Up__c,US_3BClean_Users__c,UK_3BClean_Users__c,X3BClean_User_Counts_Date__c,Number_of_PS_Days_Provided_at_No_Charge__c,Pre_purchased_PS_Days_Total_Billing__c,Number_of_offices__c,Year_1_Billing_Amount_Services__c,Year_2_Billing_Amount_Services__c,Year_3_Billing_Amount_Services__c,Year_4_Billng_Amount_Services__c,Year_4_Services_of_Days_del__c,Year_1_Billing_Amount_Software__c,Year_2_Billing_Amount_Software__c,Year_3_Billing_Amount_Software__c,Year_4_Billing_Amount_Software__c,NDA__c,EagleEye_Users__c,Increase_Cap__c,Currency_Type__c,Red_Yellow_Green__c,Total_Number_of_Pre_Purchased_Svc_Days__c,Services_of_Pre_purchased_Days__c,Average_Billing_Amount_Services__c,Average_Billing_Amount_Software__c,Primary_Agreement_Recipient__c,Secondary_Agreement_Recipient__c,Year_1_Billing_Amount_EagleEye__c,Year_2_Billing_Amount_EagleEye__c,Year_4_Billing_Amount_EagleEye__c,Year_3_Billing_Amount_EagleEye__c,Year_1_Billing_Amount_3BClean__c,Year_2_Billing_Amount_3BClean__c,Year_3_Billing_Amount_3BClean__c,Year_4_Billing_Amount_3BClean__c,Average_Billing_Amount_EagleEye__c,Average_Billing_Amount_3BClean__c,Fiscal_Year_End__c,Pre_purchased_PS_Days_Discounted_Dai__c,PS_Days_Total_Actual_Value__c,Total_PS_Days_Used__c,Billing_Term_Net_Days__c,Previous_Contract_ID__c from Contract WHERE Id=:cont.Id];
+			
+			integer term = cont.Contract_Term_Length_Yrs__c.intValue();
 			//Process contract products
 
 			
@@ -73,7 +75,7 @@ public with sharing class CreateDraftContractFromContract {
             	}
             	//non perpetual (subscription) logic
              else {
-             	integer term = cont.Contract_Term_Length_Yrs__c.intValue();
+             	
              	system.debug('term=');
              	system.debug(term);
             	newcontract.EndDate = cont.endDate.AddYears(term);
@@ -91,8 +93,10 @@ public with sharing class CreateDraftContractFromContract {
                                     //Next, do EagleEye
                                     If (cont.Year_1_Billing_Amount_EagleEye__c != null )
                                     			{
+                                    				system.debug('one uear contract - EE year 1 amount =' + cont.Year_1_Billing_Amount_EagleEye__c);
                                        Integer newYear1EagleEye  = RoundMe(((cont.Year_1_Billing_Amount_EagleEye__c * oneYearPercentIncrease) + cont.Year_1_Billing_Amount_EagleEye__c), 500);
                                         newcontract.Year_1_Billing_Amount_EagleEye__c = newYear1EagleEye;
+                                        system.debug('newYear1EagleEye=' + newYear1EagleEye);
                                         		}
 
                                     //Next, do 3BClean
@@ -136,8 +140,8 @@ public with sharing class CreateDraftContractFromContract {
             	
             	system.debug('checking to see if we are in a 3 year term');
             	        	If (cont.Contract_Term_Length_Yrs__c == 3)
-            	        	system.debug('we are in a 3 year term');
-            	{
+            	        	{
+            		system.debug('we are in a 3 year term');
 					system.debug('checking to see if we year 3 docx is null');
                                     If (cont.Year_3_Billing_Amount_Software__c != null)
                                     		{
@@ -285,8 +289,26 @@ public with sharing class CreateDraftContractFromContract {
                                  	newcontract.Prior_Contract_Year_3_Services__c = cont.Year_3_Billing_Amount_Services__c;
                                  	newcontract.Prior_Contract_Year_3_DocXtools__c = cont.Year_3_Billing_Amount_Software__c;
             	 			}
+            	 			
+            	//Fill out year 1 - year 4 contract start and end dates.
+            		Date endDateForCalculations = cont.Enddate + 1;
             	
-                                                   
+            		newContract.year_1_start_date__c = endDateForCalculations;
+            		newContract.year_1_end_date__c =  endDateForCalculations.AddYears(1).AddDays(-1);
+            		
+            		if (term > 1 ){
+					newContract.year_2_start_date__c = endDateForCalculations.AddYears(1);
+					newContract.year_2_end_date__c =  endDateForCalculations.AddYears(2).AddDays(-1);
+            		}
+            		if (term > 2)  {
+					newContract.year_3_start_date__c = endDateForCalculations.AddYears(2);
+					newContract.year_3_end_date__c =  endDateForCalculations.AddYears(3).AddDays(-1);
+            		}
+					  	if (term > 3)
+					  {
+					newContract.year_4_start_date__c = endDateForCalculations.AddYears(3);
+					newContract.year_4_end_date__c =  endDateForCalculations.AddYears(4).AddDays(-1);           	
+					  }                             
                             
 system.debug('status=');
 system.debug(newContract.status);
